# task-done

./: README.md  docker-compose.yml  middleware.ts  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  interfaces.ts  layout.tsx
app/(auth)/(routes)/: layout.tsx
app/(route)/: page.tsx
app/(route)/components/: AddToDo.tsx  AuthForm.tsx  ComingUpNext.tsx  CompletedTask.tsx  Header.tsx  PendingTask.tsx  PendingTaskCard.tsx  TaskCard.tsx  TaskPending.tsx  TodoTask.tsx
app/api/addTask/: route.ts
app/api/completedTask/: route.ts
app/api/latestTask/: route.ts
app/api/login/: route.ts
app/api/pendingTask/: route.ts
app/api/register/: route.ts
app/api/todoTask/: route.ts
app/api/user/: route.ts
app/lib/: drizzle.ts
app/store/: ReduxProvider.tsx  completedTask.ts  hooks.ts  pendingTask.ts  store.ts  task.ts  taskCompleted.ts  todoTask.ts
app/utils/: formatDate.ts
backend/: Dockerfile
backend/api/: pyproject.toml
backend/api/api/: main.py
backend/api/api/utils/: hashed_password.py
backend/api/models/: category.py  project.py  sub_task.py  task.py  user.py
components/ui/: button.tsx  checkbox.tsx  toast.tsx
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/actions/: add-category.ts  edit-category.ts  get-categories-list.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: logo.tsx  mode-toggle.tsx  (+2 more)
hooks/useAuth/: index.tsx
lib/: auth.js  auth.ts  drizzle.ts
todo_list/: package-lock.json  package.json
todo_list/app/: layout.tsx  page.tsx
(+115 files in other folders)
